--- a/.github/workflows/build-datatypes-package.yml
+++ b/.github/workflows/build-datatypes-package.yml
@@ -8,7 +8,12 @@ on:
     branches:
       - main
     paths:
+      - 'src/autopatchdatatypes/pyproject.toml'
       - 'src/autopatchdatatypes/autopatchdatatypes/**'
+
+env:
+  PYTHON_VERSION: 3.12.3
+  BUILD_TOOLS_VERSION: 1.2.2.post1
 
 jobs:
   build:
@@ -21,29 +26,25 @@ jobs:
           egress-policy: audit
       - name: Checkout code
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           sparse-checkout: |
             src/autopatchdatatypes/pyproject.toml
             src/autopatchdatatypes/autopatchdatatypes
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Set up Python
-        uses: actions/setup-python@42375524e23c412d93fb67b49958b491fce71c38 # v4
+        uses: actions/setup-python@42375524e23c412d93fb67b49958b491fce71c38 # v5.4.0
         with:
-          python-version: '3.12.3'
-
+          python-version: ${{ env.PYTHON_VERSION }}
       - name: Upgrade pip and install build module
         run: |
           python -m pip install --upgrade pip
-          pip install build
-
-      - name: Build Package
+          pip install build==${{ env.BUILD_TOOLS_VERSION }}
+      - name: Build AutoPatch Datatypes Package
         working-directory: src/autopatchdatatypes
         run: python -m build
-
       - name: Upload Build Artifact
-        uses: actions/upload-artifact@4cec3d8aa04e39d1a68397de0c4cd6fb9dce8ec1 # v3
+        uses: actions/upload-artifact@4cec3d8aa04e39d1a68397de0c4cd6fb9dce8ec1 # v4.6.1
         with:
           name: python-package-build
           path: src/autopatchdatatypes/dist
