feat(github actions): add on pull request to main for datatypes dir to build python package

--- a/.github/workflows/build-datatypes-package.yml
+++ b/.github/workflows/build-datatypes-package.yml
@@ -3,6 +3,11 @@ run-name: Build and Publish Python Package by @${{ github.actor }}
 
 on:
   workflow_dispatch:
+  pull_request:
+    branches:
+      - main
+    paths:
+      - 'src/autopatchdatatypes/autopatchdatatypes/**'
 
 jobs:
   build:
