fix(github actions): update GHA versions to latest release tags

--- a/.github/workflows/build-datatypes-package.yml
+++ b/.github/workflows/build-datatypes-package.yml
@@ -33,6 +33,8 @@ jobs:
             src/autopatchdatatypes/pyproject.toml
             src/autopatchdatatypes/autopatchdatatypes
       - name: Set up Python
+        uses: actions/setup-python@42375524e23c412d93fb67b49958b491fce71c38 # v4
+      - name: Set up Python
         uses: actions/setup-python@42375524e23c412d93fb67b49958b491fce71c38 # v5.4.0
         with:
           python-version: ${{ env.PYTHON_VERSION }}
