--- a/.github/workflows/build-datatypes-package.yml
+++ b/.github/workflows/build-datatypes-package.yml
@@ -26,12 +26,12 @@ jobs:
           egress-policy: audit
       - name: Checkout code
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           sparse-checkout: |
             src/autopatchdatatypes/pyproject.toml
-            src/autopatchdatatypes/autopatchdatatypes
+            src/autopatchdatatypes/autopatchdatatypes/**.py
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Set up Python
         uses: actions/setup-python@42375524e23c412d93fb67b49958b491fce71c38 # v4
       - name: Set up Python
