fix(GHA): update globs to capture pyproject toml

--- a/.github/workflows/build-datatypes-package.yml
+++ b/.github/workflows/build-datatypes-package.yml
@@ -23,7 +23,8 @@ jobs:
         with:
           fetch-depth: 1
           sparse-checkout: |
-            src/autopatchdatatypes/autopatchdatatypes/
+            src/autopatchdatatypes/autopatchdatatypes/**.py
+            src/autopatchdatatypes/autopatchdatatypes/pyproject.toml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
