try fix checkout glob path

--- a/.github/workflows/build-datatypes-package.yml
+++ b/.github/workflows/build-datatypes-package.yml
@@ -21,10 +21,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
-          fetch-depth: 1
           sparse-checkout: |
-            src/autopatchdatatypes/autopatchdatatypes/**.py
-            src/autopatchdatatypes/autopatchdatatypes/pyproject.toml
+            src/autopatchdatatypes/autopatchdatatypes
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
