fix(gha): specify correct working directory for build command

--- a/.github/workflows/build-datatypes-package.yml
+++ b/.github/workflows/build-datatypes-package.yml
@@ -39,7 +39,7 @@ jobs:
           pip install build
 
       - name: Build Package
-        working-directory: src/autopatchdatatypes/autopatchdatatypes
+        working-directory: src/autopatchdatatypes
         run: python -m build
 
       - name: Upload Build Artifact
