just force save to how the CI wants to sort the imports, will figure out later how to align local and CI config

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -69,7 +69,7 @@
 					"editor.formatOnSave": true,
 					"editor.defaultFormatter": "ms-python.black-formatter",
 					"editor.codeActionsOnSave": {
-						"source.organizeImports": "explicit"
+						"source.sortImports": "explicit"
 					},
 					"isort.args": [
 						"--settings-path", "${workspaceFolder}"
