--- a/src/fuzzing-service/Taskfile.yml
+++ b/src/fuzzing-service/Taskfile.yml
@@ -16,18 +16,18 @@ tasks:
   run:
     desc: run autopatch-fuzzingservice
     generates:
-      - autopatch-fuzzingservice.log
+      - log/autopatch-fuzzingservice.log
     preconditions:
-      - stat config.json
+      - stat config/config.json
     cmds:
       - python ./fuzzing_service.py
   
   debug:
     desc: debug autopatch-fuzzingservice
     generates:
-      - autopatch-fuzzingservice.log
+      - log/autopatch-fuzzingservice.log
     preconditions:
-      - stat config.json
+      - stat config/config.json
     cmds:
       - python -m pdb ./fuzzing_service.py
   
