--- a/src/patch-evaluation-service/config/config.json
+++ b/src/patch-evaluation-service/config/config.json
@@ -2,10 +2,11 @@
     "version": "0.1.0",
     "appname": "autopatch.patch-evaluation-service",
     "logging_config" : "/app/config/logging-config.json",
-    "patch_eval_svc_dummy_config_item": "some_value",
-    "patch_eval_svc_dummy_config_bool": true,
-    "patch_eval_svc_dummy_config_int": 123,
-    "patch_eval_svc_dummy_config_float": 123.456,
+    "crashes_events":"/app/crash_events/",
+    "patch_eval_results":"/app/data/",
+    "patched_codes_path":"/app/patched_codes/",
+    "executables_path":"/app/executables/",
+    "temp_crashes_path":"/app/temp_crashes_files/",
     "mqtt_host": "localhost",
     "mqtt_port": 1883
 }
