made readme in patch-eval-service/bin, updating config paths from executables to bin

--- a/src/patch-evaluation-service/config/config.json
+++ b/src/patch-evaluation-service/config/config.json
@@ -5,7 +5,7 @@
     "crashes_events":"/app/crash_events/",
     "patch_eval_results":"/app/data/",
     "patched_codes_path":"/app/patched_codes/",
-    "executables_path":"/app/executables/",
+    "executables_path":"/app/bin/",
     "temp_crashes_path":"/app/temp_crashes_files/",
     "mqtt_host": "localhost",
     "mqtt_port": 1883
