feature(releases): Add first pre-release GHA for tracking latest tag to main branch

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -62,7 +62,8 @@
 				"mechatroner.rainbow-csv",
 				"bierner.markdown-mermaid",
 				"bpruitt-goddard.mermaid-markdown-syntax-highlighting",
-				"MS-vsliveshare.vsliveshare"
+				"MS-vsliveshare.vsliveshare",
+				"GitHub.vscode-github-actions"
 			],
 			"settings": {
 				"[python]": {
