--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           egress-policy: audit
       - name: arduino/setup-task
-        uses: arduino/setup-task@b91d5d2c96a56797b48ac1e0e89220bf64044611 v2.0.0
+        uses: arduino/setup-task@b91d5d2c96a56797b48ac1e0e89220bf64044611 # v2.0.0
       - name: Checkout code
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
@@ -47,7 +47,8 @@ jobs:
       - name: "Build & test"
         run: |
           task test
-      - uses: "marvinpinto/action-automatic-releases@latest"
+      - name: Automatic Releases
+        uses: marvinpinto/action-automatic-releases@919008cf3f741b179569b7a6fb4d8860689ab7f0 # v1.2.1
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           automatic_release_tag: "latest"
