--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -3,6 +3,10 @@ name: "pre-release"
 run-name: "Pre Release by @${{ github.actor }}"
 
 on:
+  workflow_dispatch:
+  pull_request:
+    branches:
+      - "main"
   push:
     branches:
       - "main"
