--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -10,7 +10,7 @@ on:
   push:
     branches:
       - "main"
-      - "feature/automatic-pre-release-latest-dev-buildfeature/automatic-pre-release-latest-dev-build"
+      - "feature/automatic-pre-release-latest-dev-build"
 
 env:
   PYTHON_VERSION: "3.12.3"
@@ -45,10 +45,10 @@ jobs:
           pip install build
       - name: Build AutoPatch.Datatypes Package
         working-directory: src/autopatchdatatypes
-        run: task auto_patch_datatypes:build # run: python -m build
+        run: task autopatchdatatypes:build
       - name: Install AutoPatch.Datatypes Package
         working-directory: src/autopatchdatatypes
-        run: task auto_patch_datatypes:install
+        run: task autopatchdatatypes:install
       - name: "Build & test"
         run: |
           task test
