--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -33,6 +33,7 @@ jobs:
           sparse-checkout: |
             .github
             src
+            Taskfile.yml
       - name: Set up Python
         uses: actions/setup-python@42375524e23c412d93fb67b49958b491fce71c38 # v4
         with:
@@ -44,10 +45,8 @@ jobs:
         run: |
           pip install build
       - name: Build AutoPatch.Datatypes Package
-        working-directory: src/autopatchdatatypes
         run: task autopatchdatatypes:build
       - name: Install AutoPatch.Datatypes Package
-        working-directory: src/autopatchdatatypes
         run: task autopatchdatatypes:install
       - name: "Build & test"
         run: |
