add contents write perm to pre release workflow

--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -12,6 +12,9 @@ on:
       - "main"
       - "feature/automatic-pre-release-latest-dev-build"
 
+permissions:
+  contents: write
+
 env:
   PYTHON_VERSION: "3.12.3"
 
