try update glob string

--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -65,5 +65,5 @@ jobs:
           prerelease: true
           title: "Development Build"
           files: |
-            *.whl
-            autopatchdatatypes-*.tar.gz
+            **/*.whl
+            **/autopatchdatatypes-*.tar.gz
