--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -15,6 +15,9 @@ on:
       - 'src/**'
       - 'tests/**'
 
+env:
+  PYTHON_VERSION: '3.12.3'
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -30,21 +33,25 @@ jobs:
             .github
             src
             pyproject.toml
-
+            Taskfile.yml
       - name: Set up Python
         uses: actions/setup-python@42375524e23c412d93fb67b49958b491fce71c38 # v5.4.0
         with:
-          python-version: '3.12.3'
-
-      - name: Install dependencies
+          python-version: ${{ env.PYTHON_VERSION }}
+      - name: Install build module
         run: |
           python -m pip install --upgrade pip
+          pip install build==1.2.2.post1
+      - name: Build AutoPatch.Datatypes Package
+        run: task autopatchdatatypes:build
+      - name: Install AutoPatch.Datatypes Package
+        run: task autopatchdatatypes:install
+      - name: Install Test dependencies
+        run: |
           pip install pytest==8.3.4 pytest-cov==6.0.0
-
       - name: Run tests with coverage
         run: |
           pytest --cov=. --cov-report=xml
-
       - name: Publish coverage report
         uses: actions/upload-artifact@4cec3d8aa04e39d1a68397de0c4cd6fb9dce8ec1 # v4.6.1
         with:
