--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,23 +1,25 @@
 version: '3'
 
 includes:
- autopatch:
-    taskfile: ./src/Taskfile.yml
-    dir: ./src
- fuzzing-service:
-    taskfile: ./src/fuzzing-service/Taskfile.yml
-    dir: ./src/fuzzing-service
- llm-dispatch:
-    taskfile: ./src/llm-dispatch/Taskfile.yml
-    dir: ./src/llm-dispatch
+   autopatch:
+      taskfile: ./src/Taskfile.yml
+      dir: ./src
+   fuzzing-service:
+      taskfile: ./src/fuzzing-service/Taskfile.yml
+      dir: ./src/fuzzing-service
+   llm-dispatch:
+      taskfile: ./src/llm-dispatch/Taskfile.yml
+      dir: ./src/llm-dispatch
+   autopatchdatatypes:
+      taskfile: ./src/autopatchdatatypes/Taskfile.yml
+      dir: ./src/autopatchdatatypes
 
 tasks:
    test:
       desc: Run tests
       cmds:
          - "echo 'Running tests...'"
-         - "echo Not Yet Implemented"
-         # - task: autopatch:test
+         - pytest
    lint:
       desc: Run linter
       cmds:
