--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -15,6 +15,10 @@ on:
       - 'src/**'
       - 'tests/**'
 
+permissions:
+  contents: write
+  checks: write
+  pull-requests: write
 env:
   PYTHON_VERSION: '3.12.3'
 
