--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -32,3 +32,7 @@ tasks:
       - "echo 'Building datatypes...'"
       - task: autopatchdatatypes:build
       - task: autopatchdatatypes:install
+   prep-docker-context:
+      desc: Prepare docker context
+      cmds:
+      - cp ./src/autopatchdatatypes/dist/*.whl ./src/fuzzing-service
