--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -15,6 +15,18 @@ includes:
       dir: ./src/autopatchdatatypes
 
 tasks:
+   install-devtools:
+      desc: Install devtools
+      cmds:
+      - task autopatch:install-devtools
+      # - task fuzzing-service:install-devtools
+      # - task llm-dispatch:install-devtools
+      # - task autopatchdatatypes:install-devtools
+   test-with-coverage:
+      desc: Run tests with coverage
+      cmds:
+         - "echo 'Running tests with coverage...'"
+         - pytest --junitxml=pytest.xml --cov=. --cov-report=xml
    test:
       desc: Run tests
       cmds:
@@ -36,3 +48,16 @@ tasks:
       desc: Prepare docker context
       cmds:
       - cp ./src/autopatchdatatypes/dist/*.whl ./src/fuzzing-service
+   install-package-dependencies:
+      desc: Install package dependencies
+      cmds:
+      - "echo 'Installing package dependencies...'"
+      - pip install -r requirements.txt
+      - task fuzzing-service:install
+      # - task llm-dispatch:install
+      # - task patch-request-generator-component:install
+      # - task main:install
+      # - task report-generaation:install
+      # - task patch-evaluation-service:install
+      # - task prompt-evaluation-service:install
+
