--- a/src/autopatchpubsub/Taskfile.yml
+++ b/src/autopatchpubsub/Taskfile.yml
@@ -4,4 +4,4 @@ tasks:
   install:
     desc: install autopatchpubsub
     cmds:
-      - pip install -r requirements.txt
+      - pip install -r requirements.txt --break-system-packages
