--- a/src/fuzzing-service/Taskfile.yml
+++ b/src/fuzzing-service/Taskfile.yml
@@ -39,7 +39,7 @@ tasks:
   install:
     desc: install autopatch-fuzzingservice
     cmds:
-      - pip install -r requirements.txt
+      - pip install -r requirements.txt  --break-system-packages
 
   clean:
     desc: scrubs the workspace, old debug log files etc.
