--- a/src/fuzzing-service/config/config.json
+++ b/src/fuzzing-service/config/config.json
@@ -1,7 +1,7 @@
 {
     "version": "0.2.0",
     "appname": "autopatch.fuzzing-service",
-    "logging_config" : "/app/config/logging-config.json",
+    "logging_config" : "config/logging-config.json",
     "concurrency_threshold": 10,
     "message_broker_host": "mosquitto",
     "message_broker_port": 1883,
