changes to root gitignore to include bin directory

--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,13 @@
 .env
 venv/
 .task/
-
+bin/*
 # Super-linter outputs
 super-linter-output
 super-linter.log
 
+# REMOVE THIS FROM SRC
+output_vulnerable/
 # GitHub Actions leftovers
 github_conf
 
