feature/add mqtt to fuzzing component (#47)
* rename codebase folder to input_codebase and move to root

* move docs out of assets and move input codebase into assets

* feature(types): Add CrashDetail data type as a package and supporting tests

* feature(build, github actions): add a github action to build the autopatchdatatypes package

* lint(tests): isort test_fuzzing_service

* docs(ADR): Add CloudEvents ADR

* docs(ADR): add example cloud event from crashdetail datatype

* Update 004.adr-cloudevents.md

move ADR to in-Review

* linting(tests): apply linter fixes for test_fuzzing_service

* fix(github actions): update GHA versions to latest release tags

* fix(GHA): update globs to capture pyproject toml

* try add pyproject toml to linter GHA

* specify isort config file in linter GHA workflow

* add workspace path to pyproject prefix

* try again

* try again

* just force save to how the CI wants to sort the imports, will figure out later how to align local and CI config

* documentation: Add versioning strategy to project readme

* feature(concurrency): add asyncio to fuzzer mapping of datatypes and production on dummy MQTT output, update test to work with asyncio

* working draft of message broker facade for mqtt publishing

* add task for moving build datatypes wheel into fuzzer docker container

* update init in readme

* linter suggestions

* set fuzzer log config to container context by default

* set to working state

* config(mosquitto): Add mosquitto configuration and required directory paths for moutning on containers

* update gitignore

* coverage: update taskfiles

* remove build-datatypes-package GHA as now the pre-release GHA will publish the needed packages to it's build page

* update install devtools scripting

* tests(CI): align CI with Task interface for shared local and CI interace

* move install package logic such that datatypes package is present

* revert test pipeline name to original to stop proliferation of pipelines

* Fix(tests

--- a/src/fuzzing-service/Taskfile.yml
+++ b/src/fuzzing-service/Taskfile.yml
@@ -16,18 +16,18 @@ tasks:
   run:
     desc: run autopatch-fuzzingservice
     generates:
-      - autopatch-fuzzingservice.log
+      - log/autopatch-fuzzingservice.log
     preconditions:
-      - stat config.json
+      - stat config/config.json
     cmds:
       - python ./fuzzing_service.py
   
   debug:
     desc: debug autopatch-fuzzingservice
     generates:
-      - autopatch-fuzzingservice.log
+      - log/autopatch-fuzzingservice.log
     preconditions:
-      - stat config.json
+      - stat config/config.json
     cmds:
       - python -m pdb ./fuzzing_service.py
   
@@ -35,6 +35,11 @@ tasks:
     desc: test autopatch-fuzzingservice
     cmds:
       - pytest
+
+  install:
+    desc: install autopatch-fuzzingservice
+    cmds:
+      - pip install -r requirements.txt  --break-system-packages
 
   clean:
     desc: scrubs the workspace, old debug log files etc.
