--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,3 +58,4 @@ jobs:
           files: |
             **/*.whl
             **/autopatchdatatypes-*.tar.gz
+            **/autopatchpubsub-*.tar.gz
