--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,21 +1,19 @@
+# .github/workflows/release.yml
 ---
-name: "pre-release"
-run-name: "Pre Release by @${{ github.actor }}"
+name: Tagged-Release
+run-name: Tagged Release by @${{ github.actor }}
 
 on:
   push:
-    branches:
-      - "main"
-
-permissions:
-  contents: write
+    tags:
+      - "v*"
 
 env:
   PYTHON_VERSION: "3.12.3"
 
 jobs:
-  pre-release:
-    name: "Pre Release"
+  tagged-release:
+    name: "Tagged Release"
     runs-on: "ubuntu-latest"
     steps:
       - name: Harden-Runner
@@ -51,13 +49,13 @@ jobs:
       - name: "Build & test"
         run: |
           task test
-      - name: Automatic Releases
+      - name: Automatic Tagged Release
         uses: marvinpinto/action-automatic-releases@919008cf3f741b179569b7a6fb4d8860689ab7f0 # v1.2.1
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "latest"
-          prerelease: true
-          title: "Development Build"
+          prerelease: false
+          draft: true
           files: |
             **/*.whl
             **/autopatchdatatypes-*.tar.gz
+            **/autopatchpubsub-*.tar.gz
