--- a/src/patch-evaluation-service/config/config.json
+++ b/src/patch-evaluation-service/config/config.json
@@ -8,6 +8,8 @@
     "executables_path":"/app/bin/executables/",
     "compiler_warning_flags":"-Wall -Wextra -Wformat -Wshift-overflow -Wcast-align -Wstrict-overflow -fstack-protector-strong",
     "temp_crashes_path":"/app/temp_crashes_files/",
+    "compile_timeout":10,
+    "run_timeout":10,
     "mqtt_host": "localhost",
     "mqtt_port": 1883
 }
