lint(frequency): lower freqeuncy of linting runs from on push to all branches to on push to main and on PR

--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -3,6 +3,9 @@ name: Lint
 run-name: Lint by @${{ github.actor }}
 
 on: # yamllint disable-line rule:truthy
+  push:
+    branches:
+      - main
   pull_request: null
 
 permissions:
