--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 .env
 venv/
 .task/
-
+bin/
 # pytest reports, if you really need historical test reports, archive them from CI instead of comitting them
 pytest.xml
 
