bugfix(dockernetwork): add network as code and automation for indempotently creating docker network managed outisde of compose lifecycle for both the devcontainer and interactive tasks

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -79,6 +79,7 @@
 			}
 		}
 	},
+	"initializeCommand": ["python3", "assets/create-docker-network.py"],
 	"runArgs": [
 		"--network", "autopatch-llm_autopatch-docker-network",
 		"--env-file", ".devcontainer/devcontainer.env"
